methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:17: error: Unit does not take parameters
    faireV(); faireDeuxV(); faireV(); faireDeuxV(); faireV()
                        ^PictureMono2:17: error: Unit does not take parameters
    faireV(); faireDeuxV(); faireV(); faireDeuxV(); faireV()
                                                ^